--- a/src/footer/FooterStyle.css
+++ b/src/footer/FooterStyle.css
@@ -2,10 +2,14 @@
 	height: auto;
 	margin-top: 25%;
 	background-color: #181818;
-	font-size: 10px;
 	color: #888;
 }
-.footer a {
+.footer .copyright {
+	background-color: #333;
+	color: #888;
+	font-size: 10px;
+}
+.footer .copyright a {
 	color: #f39200;
 	font-size: 9px;
 }
